fix slight overflow in ios pwa

--- a/src/components/mainPage.css
+++ b/src/components/mainPage.css
@@ -2,7 +2,7 @@
 	position: absolute;
 	top: 0;
 	width: 100%;
-	height: 100%;
+	height: 100dvh;
 	overflow-y: scroll;
 	overflow-x: hidden;
 }
